--- a/index.html
+++ b/index.html
@@ -56,11 +56,12 @@
 
     <section class="eventos">
         <h2>EVENTOS</h2>
+        <img src="IMG/bgTvLeao_Home 1.png" alt="Eventos Image" class="eventos-image">
         <div class="eventos-list">
             <div class="evento-item" onclick="toggleEvent(this)">
                 <div class="evento-header">
                     <h3>3º Encontro de Mulheres Tricolores</h3>
-                    <button class="toggle-button">+</button>
+                    <button class="evento-content">+</button>
                 </div>
                 <div class="evento-content">
                     <p>Uma manhã de muita interação, na comunidade do Barroso. O encontro incluiu palestras de violência contra a mulher, serviços de beleza, lanches, brincadeiras e a presença dos nossos mascotes.</p>
@@ -140,6 +141,65 @@
             </div>
         </div>
     </section>
+    <section class="imagens">
+        <h2>IMAGENS</h2>
+        <div class="imagens-grid">
+            <img src="IMG/img1.png" alt="Image 1">
+            <img src="IMG/img2.png" alt="Image 2">
+            <img src="IMG/img3.png" alt="Image 3">
+            
+        </div>
+    </section>
+
+    <section class="projects">
+        <h2>PROJETOS</h2>
+        <div class="projects-grid">
+            <img src="IMG/ima1.png" alt="Project 1">
+            <img src="IMG/ima3.png" alt="Project 2">
+            <img src="IMG/ima4.png" alt="Project 4">
+            <img src="IMG/ima5.png" alt="Project 5">
+            <img src="IMG/Design sem nome(1)(1) 1.png" alt="Project 3">
+            <img src="IMG/ima6.png" alt="Project 6">
+        </div>
+    </section>
+
+    <footer>
+        <div class="footer-content">
+            <div class="footer-top">
+                <img src="IMG/btb.png" alt="Footer Logo" class="footer-logo">
+                <img src="IMG/logofortaleza 1.png" alt="Footer Logo" class="footer-logo">
+                <p>Pix para doação: 45.725.871/0001-00</p>
+                <div class="social-media">
+                    <a href="#" target="_blank"><img src="IMG/Vector.png" alt="Instagram"></a>
+                    <a href="#" target="_blank"><img src="IMG/Vector (1).png" alt="Youtube"></a>
+                </div>
+            </div>
+
+            <div class="footer-bottom">
+                <div class="footer-section">
+                    <h3>Social</h3>
+                    <ul>
+                        <li><a href="#">Bem Tricolor</a></li>
+                        <li><a href="#">Eventos</a></li>
+                        <li><a href="#">Projetos</a></li>
+                        <li><a href="#">Balanço Social 2024</a></li>
+                        <li><a href="#">Torne-se um amigo do Bem</a></li>
+                        <li><a href="#">Voluntários do Bem</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer-section">
+                    <h3>Midia</h3>
+                    <ul>
+                        <li><a href="#">FortalezaCast</a></li>
+                        <li><a href="#">Na Midia</a></li>
+                    </ul>
+                </div>
+            </div>
+
+        </div>
+    </footer>
+
 
 
 
