ajustes no html  e adição de links

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     <div class="title-projeto">
 
         <div class="style-project">
-            <img src="IMG/iconProj 1.png" alt="">
+            <img src="IMG/icon/iconProj 1.png" alt="Projetos do Bem Tricolor">
             <h2>PROJETOS</h2>
         </div>
 
@@ -189,32 +189,33 @@
             se transforma em uma corrente do <strong>BEM</strong></p>
 
     </div>
-    
+
     <section class="projects">
-
-            <div class="projects-grid">
-                <section class="box-container">
-                    <a href="https://fortaleza1918.com.br/fortaleza-lanca-cartao-de-gratuidade-clube-da-garotada-para-criancas-em-jogos-como-mandante/"><img src="IMG/clube-da-garotada.png" alt="Project 1"></a>
-                    <a href="#"><img src="IMG/sopao-do-bem" alt="Project 2"></a>
-                    <a href="#"><img src="IMG/abraco-do-bem.png" alt="Project 5"></a>
-                    <a href="#"><img src="IMG/calcando-vidas.png" alt="Project 3"></a>
-                    <a href="https://fortaleza1918.com.br/leao-tech-fortaleza-inicia-capacitacao-gratuita-em-tecnologia-para-jovens-de-baixa-renda/"><img src="IMG/leao-tech2.png" alt="Project 3"></a>
-                    <a href="#"><img src="IMG/torcida-do-bem.png" alt="Project 6"></a>
-
-            </div>
-
-    </section>
+        <div class="projects-grid">
+            <section class="card-container">
+                <a
+                    href="https://fortaleza1918.com.br/fortaleza-lanca-cartao-de-gratuidade-clube-da-garotada-para-criancas-em-jogos-como-mandante/"><img
+                        src="IMG/clube-da-garotada.png" alt="clube-da-garotada"></a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSfpoxFr6mgf4r7oXDXO0yI8MN-qgzlBYp2gL3LL7ee8r4yn4w/viewform"><img src="IMG/sopao-do-bem.png" alt="Sopão do Bem"></a>
+                <a href="#"><img src="IMG/abraco-do-bem.png" alt="Abraço do Bem"></a>
+                <a href="#"><img src="IMG/calcando-vidas.png" alt="Calçando Vidas"></a>
+                <a
+                    href="https://digitalcollege.com.br/leaotech/"><img
+                        src="IMG/leao-tech2.png" alt="Leão Tech"></a>
+                <a href="#"><img src="IMG/torcida-do-bem.png" alt="Torcida do Bem"></a>
+        </div>
     </section>
 
     <footer>
         <div class="footer-content">
+
             <div class="footer-top">
-                <img src="IMG/btb.png" alt="Footer Logo" class="footer-logo">
-                <img src="IMG/logofortaleza 1.png" alt="Footer Logo" class="footer-logo">
+                <img src="IMG/btb.png" alt="Bem" class="footer-logo">
+                <img src="IMG/icon/logofortaleza 1.png" alt="Footer Logo" class="footer-logo">
                 <p>Pix para doação: 45.725.871/0001-00</p>
                 <div class="social-media">
-                    <a href="#" target="_blank"><img src="IMG/Vector.png" alt="Instagram"></a>
-                    <a href="#" target="_blank"><img src="IMG/Vector (1).png" alt="Youtube"></a>
+                    <a href="https://www.instagram.com/bemtricolor/" target="_blank"><img src="IMG/icon/instagram.png" alt="Instagram"></a>
+                    <a href="https://www.contate.me/redirect/bemtricolor?locale=pt-BR" target="_blank"><img src="IMG/icon/whatsapp.png" alt="Youtube"></a>
                 </div>
             </div>
 
@@ -222,20 +223,20 @@
                 <div class="footer-section">
                     <h3>Social</h3>
                     <ul>
-                        <li><a href="#">Bem Tricolor</a></li>
+                        <li><a href="https://drive.google.com/file/d/1f69mMc3Z0EyHvPIUYHPovr3DNPmuz5vU/view">Bem Tricolor</a></li>
                         <li><a href="#">Eventos</a></li>
                         <li><a href="#">Projetos</a></li>
-                        <li><a href="#">Balanço Social 2024</a></li>
-                        <li><a href="#">Torne-se um amigo do Bem</a></li>
-                        <li><a href="#">Voluntários do Bem</a></li>
+                        <li><a href="https://www.dropbox.com/scl/fi/rhyijxmysdanmph5s6db9/Balan-o-social-Bem-Tricolor-2024.pdf.pdf?rlkey=e5cfa42dmzdq0nizkyd6bqa6g&st=u4warvy2&dl=0">Balanço Social 2024</a></li>
+                        <li><a href="https://keepo.io/sociobemtricolor/">Torne-se um amigo do Bem</a></li>
+                        <li><a href="https://www.instagram.com/bemtricolor/reel/DEiH5tMxyqM/">Voluntários do Bem</a></li>
                     </ul>
                 </div>
 
                 <div class="footer-section">
                     <h3>Midia</h3>
                     <ul>
-                        <li><a href="#">FortalezaCast</a></li>
-                        <li><a href="#">Na Midia</a></li>
+                        <li><a href="https://www.youtube.com/c/TVLe%C3%A3o">FortalezaCast</a></li>
+                        <li><a href="https://fortaleza1918.com.br/central-de-midia/">Na Midia</a></li>
                     </ul>
                 </div>
             </div>
