--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
             <div class="azul"></div>
             <div class="logo-container">
                 <img src="IMG/bemtricolorlogo.png" alt="Bem Tricolor Logo" class="logo">
-
             </div>
 
             <nav>
@@ -196,12 +195,12 @@
                 <a
                     href="https://fortaleza1918.com.br/fortaleza-lanca-cartao-de-gratuidade-clube-da-garotada-para-criancas-em-jogos-como-mandante/"><img
                         src="IMG/clube-da-garotada.png" alt="clube-da-garotada"></a>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSfpoxFr6mgf4r7oXDXO0yI8MN-qgzlBYp2gL3LL7ee8r4yn4w/viewform"><img src="IMG/sopao-do-bem.png" alt="Sopão do Bem"></a>
+                <a
+                    href="https://docs.google.com/forms/d/e/1FAIpQLSfpoxFr6mgf4r7oXDXO0yI8MN-qgzlBYp2gL3LL7ee8r4yn4w/viewform"><img
+                        src="IMG/sopao-do-bem.png" alt="Sopão do Bem"></a>
                 <a href="#"><img src="IMG/abraco-do-bem.png" alt="Abraço do Bem"></a>
                 <a href="#"><img src="IMG/calcando-vidas.png" alt="Calçando Vidas"></a>
-                <a
-                    href="https://digitalcollege.com.br/leaotech/"><img
-                        src="IMG/leao-tech2.png" alt="Leão Tech"></a>
+                <a href="https://digitalcollege.com.br/leaotech/"><img src="IMG/leao-tech2.png" alt="Leão Tech"></a>
                 <a href="#"><img src="IMG/torcida-do-bem.png" alt="Torcida do Bem"></a>
         </div>
     </section>
@@ -210,26 +209,33 @@
         <div class="footer-content">
 
             <div class="footer-top">
-                <img src="IMG/btb.png" alt="Bem" class="footer-logo">
-                <img src="IMG/icon/logofortaleza 1.png" alt="Footer Logo" class="footer-logo">
+                <img src="IMG/btb.png" alt="Balan-o-social-Bem-Tricolor-2024" class="footer-logo">
+                <img src="IMG/icon/logofortaleza 1.png" alt="Footer Logo" class="footer-logo-fortaleza">
                 <p>Pix para doação: 45.725.871/0001-00</p>
                 <div class="social-media">
-                    <a href="https://www.instagram.com/bemtricolor/" target="_blank"><img src="IMG/icon/instagram.png" alt="Instagram"></a>
-                    <a href="https://www.contate.me/redirect/bemtricolor?locale=pt-BR" target="_blank"><img src="IMG/icon/whatsapp.png" alt="Youtube"></a>
+                    <a href="https://www.instagram.com/bemtricolor/" target="_blank"><img src="IMG/icon/instagram.png"
+                            alt="Instagram"></a>
+                    <a href="https://www.contate.me/redirect/bemtricolor?locale=pt-BR" target="_blank"><img
+                            src="IMG/icon/whatsapp.png" alt="Youtube"></a>
                 </div>
             </div>
 
             <div class="footer-bottom">
+                
                 <div class="footer-section">
-                    <h3>Social</h3>
-                    <ul>
-                        <li><a href="https://drive.google.com/file/d/1f69mMc3Z0EyHvPIUYHPovr3DNPmuz5vU/view">Bem Tricolor</a></li>
-                        <li><a href="#">Eventos</a></li>
-                        <li><a href="#">Projetos</a></li>
-                        <li><a href="https://www.dropbox.com/scl/fi/rhyijxmysdanmph5s6db9/Balan-o-social-Bem-Tricolor-2024.pdf.pdf?rlkey=e5cfa42dmzdq0nizkyd6bqa6g&st=u4warvy2&dl=0">Balanço Social 2024</a></li>
-                        <li><a href="https://keepo.io/sociobemtricolor/">Torne-se um amigo do Bem</a></li>
-                        <li><a href="https://www.instagram.com/bemtricolor/reel/DEiH5tMxyqM/">Voluntários do Bem</a></li>
-                    </ul>
+                        <h3>Social</h3>
+                        <ul>
+                            <li><a href="https://drive.google.com/file/d/1f69mMc3Z0EyHvPIUYHPovr3DNPmuz5vU/view">Bem
+                                    Tricolor</a></li>
+                            <li><a href="#">Eventos</a></li>
+                            <li><a href="#">Projetos</a></li>
+                            <li><a
+                                    href="https://www.dropbox.com/scl/fi/rhyijxmysdanmph5s6db9/Balan-o-social-Bem-Tricolor-2024.pdf.pdf?rlkey=e5cfa42dmzdq0nizkyd6bqa6g&st=u4warvy2&dl=0">Balanço
+                                    Social 2024</a></li>
+                            <li><a href="https://keepo.io/sociobemtricolor/">Torne-se um amigo do Bem</a></li>
+                            <li><a href="https://www.instagram.com/bemtricolor/reel/DEiH5tMxyqM/">Voluntários do Bem</a>
+                            </li>
+                        </ul>
                 </div>
 
                 <div class="footer-section">
@@ -239,6 +245,7 @@
                         <li><a href="https://fortaleza1918.com.br/central-de-midia/">Na Midia</a></li>
                     </ul>
                 </div>
+
             </div>
 
         </div>
