--- a/index.html
+++ b/index.html
@@ -63,9 +63,6 @@
 
     <section class="eventos">
         <h2>EVENTOS</h2>
-        <img src="IMG/bgTvLeao_Home 1.png" alt="Eventos Image" class="eventos-image">
-
-
         <div class="eventos-list">
 
             <div class="evento-item">
@@ -85,7 +82,7 @@
             
             <div class="evento-item">
                 <details>
-                    <summary>Taça Leão Social
+                    <summary>Taça Leão Social</span>
                     </summary>
                     <p>Torneio Sub 11 realizado no Ginásio Paulo Sarasate, que reuniu 16 projetos, que tiveram a oportunidade de serem avaliados pelos profissionais de base do Fortaleza. Além de gerar uma grande oportunidade para os atletas, juntamente com lanche e uniforme, a Taça Leão Social classificou atletas para a Copa Unindo Valores.</p>
                 </details>
